# S-ReVel

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.py
ReVel/: __init__.py
ReVel/LLEs/: LLE.py  __init__.py  lime.py  random.py  shap.py
ReVel/classification/: test.py  train.py
ReVel/load_data/: CIFAR10.py  CIFAR100.py  EMNIST.py  FGVC.py  FashionMNIST.py  Flowers.py  Food101.py  Imagenet.py  OxfordIIITPet.py  StandfordCars.py  __init__.py
ReVel/perturbations/: __init__.py  perturbation.py  quickshift.py  squares.py  utils.py
ReVel/revel/: __init__.py  revel.py
docs/: conf.py  requirements.txt
docs/source/: conf.py  examples.rst  index.rst  intro.rst  modules.rst  refs.bib
docs/source/modules/: LLEs.rst  perturbations.rst  revel.rst
docs/source/notebooks/: HowToMeasureAnExplanation.ipynb  WilcoxonTest.ipynb  config.json  fisrt-steps.ipynb  graphics.ipynb  imports.py
docs/source/notebooks/imagenes/SOCO/: table_lime.tex
test_slurm/: count_csvs_lines.sh  general_script.sh  hercules.sh
