[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "revel-xai"
version = "1.0.3"
authors = [
  { name="Ivan Sevillano Garcia", email="isevillano@go.ugr.es" },
]
description = "A Python package for the REVEL framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
        "torch>=2.4.1",
        "scikit-learn>=1.5.2",
        "scikit-image>=0.24.0",
        "matplotlib>=3.9.2",
        "numpy>=2.1.2",
        "scipy>=1.14.1",
        "pandas>=2.2.3",
        "torchvision>=0.19.1",
        "efficientnet_pytorch>=0.7.1",
        "tqdm>=4.66.5",
        "opencv-python>=4.10.0.84",
        "IPython>=8.28.0",
        "seaborn>=0.13.2",
        "plotly>=5.24.1",
        "ipywidgets>=8.1.5",
        "sphinx>=8.0.2",
        "sphinx_rtd_theme>=3.0.0",
        "sphinxcontrib.bibtex>=2.6.3",
        "nbsphinx>=0.9.5",
        "wget>=3.2",
        "pandoc>=2.4",
        "torchsummary>=1.5.1",
        "tensorboard>=2.18.0",
        "twine>=5.1.1",
    ]

[project.urls]
Homepage = "https://github.com/ari-dasci/revel"
Issues = "https://github.com/ari-dasci/revel/issues"
